--- a/styles.css
+++ b/styles.css
@@ -22,25 +22,18 @@ body {
     bottom: 0;
     left: 50%;
     width: 2px;
-    /* background: #cbad8dcd; */
     background-color: #d4af37;
-    transform: translateX(-50%); 
+    transform: translateX(-50%);
 }
 
-.timeline-item {
+.timeline-item-fixed {
     position: relative;
-    margin-bottom: 50px;
-    padding-right: 50%;
-    text-align: right;
+    margin-bottom: 30px;
+    width: 100%;
+    clear: both;
 }
 
-.timeline-item:nth-child(even) {
-    padding-right: 0;
-    padding-left: 50%;
-    text-align: left;
-}
-
-.timeline-item::after {
+.timeline-item-fixed::after {
     content: '';
     position: absolute;
     width: 20px;
@@ -50,6 +43,29 @@ body {
     top: 5px;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 1;
+}
+
+.timeline-content-right {
+    width: 47%;
+    float: right;
+    margin-right: 50%;
+    padding-right: 30px;
+    background-color: white;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.timeline-content-left {
+    width: 47%;
+    float: left;
+    margin-left: 50%;
+    padding-left: 30px;
+    background-color: white;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .timeline-content {
